v2.4 | Fixed visual issues where the To-Do list item`s buttons expand too much while trying to edit a list item, idk man i said i wanna focus on JavaScript in this project but i can`t stop myself from messing around with CSS... I love it.

--- a/To-Do-App/to-do.css
+++ b/To-Do-App/to-do.css
@@ -52,7 +52,7 @@ textarea {
     padding: 1rem 0;
 }
 .list__item + .list__item {
-    border-top: 0.0781rem solid var(--secondary);
+    border-top: 0.0781rem solid var(--secondary-clr);
 }
 
 .item__container {
@@ -72,6 +72,7 @@ textarea {
     padding: 0 0.50rem;
 }
 .item__button {
+    max-height: 3rem;
     justify-self: center;
     align-self: center;
 }
